apps/cilium-networking-config/cilium-gateway.yaml
# +argocd:skip-file-rendering
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    hostname: "10-89-0-10.nip.io"
  - protocol: TLS
    port: 443
    name: https
    hostname: "10-89-0-10.nip.io"
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - type: IPAddress
    value: 10.89.0.10
